--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
       # ONEX Pattern Validator
       - id: onex-patterns
         name: onex patterns
-        entry: poetry run python -m omnibase_core.validation.cli patterns src/omniintelligence/tools
+        entry: uv run python -m omnibase_core.validation.cli patterns src/omniintelligence/tools
         language: system
         pass_filenames: false
         files: ^src/omniintelligence/tools/.*\.py$
@@ -41,7 +41,7 @@ repos:
       # ONEX Union Usage Validator
       - id: onex-union-usage
         name: onex union-usage
-        entry: poetry run python -m omnibase_core.validation.cli union-usage src/omniintelligence/tools
+        entry: uv run python -m omnibase_core.validation.cli union-usage src/omniintelligence/tools
         language: system
         pass_filenames: false
         files: ^src/omniintelligence/tools/.*\.py$
@@ -49,7 +49,7 @@ repos:
       # Contract Linter (for main contract YAML and FSM files only)
       - id: contract-linter
         name: contract linter
-        entry: poetry run python -m omniintelligence.tools.contract_linter
+        entry: uv run python -m omniintelligence.tools.contract_linter
         language: system
         # Only validate main contracts (*_contract.yaml) and FSM files (fsm_*.yaml)
         # Exclude subcontracts/ and workflows/ directories
@@ -59,7 +59,7 @@ repos:
       # Pytest (only run if test files changed)
       - id: pytest-tools
         name: pytest (tools)
-        entry: poetry run pytest tests/unit/tools/ -v --tb=short
+        entry: uv run pytest tests/unit/tools/ -v --tb=short
         language: system
         pass_filenames: false
         files: ^(src/omniintelligence/tools/|tests/unit/tools/).*\.py$
